--- a/OctoClient.csproj
+++ b/OctoClient.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Octopus.Client" Version="8.8.1" />
+    <PackageReference Include="Octopus.Client" Version="9.0.6" />
   </ItemGroup>
 
 </Project>
